# openc2-oif-device

./: .git_ssh  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.old  .ssh_config  CONTRIBUTING.md  OIF Kestrel (Init).ipynb  README.md  SECURITY.md  config.toml  configure.py  device-compose.log.yaml  device-compose.log_central.yaml  device-compose.log_local.yaml  device-compose.yaml  echo_info.sh  git_push.py  http_ca.crt  logging.conf  main.py  mqtt_test.py  release_notes.md  requirements.txt  test.json  update_subs.py
base/modules/tmp/sb_utils/actuator/: .pylintrc  requirements.txt  setup.cfg  setup.py
base/modules/tmp/sb_utils/actuator/sb_utils/actuator/: actuator.py  dispatch.py  exceptions.py  general.py
base/modules/tmp/sb_utils/osquery_orm/: .pylintrc  ReadMe.md  requirements.txt  setup.cfg  setup.py  test.py
base/modules/tmp/sb_utils/osquery_orm/osquery_orm/: __init__.py  query_db.py  table_template.txt  update_tables.py
base/modules/tmp/sb_utils/osquery_orm/osquery_orm/orm/: __init__.py  base_model.py  cursor.py  utils.py
base/modules/tmp/sb_utils/osquery_orm/osquery_orm/specs/cross_platform/: time.table
base/modules/tmp/sb_utils/osquery_orm/osquery_orm/tables/: __init__.py  consts.py  tables.py
base/modules/tmp/sb_utils/osquery_orm/osquery_orm/tables/cross_platform/: __init__.py  arp_cache.py  atom_packages.py  azure_instance_metadata.py  azure_instance_tags.py  carbon_black_info.py  carves.py  chrome_extension_content_scripts.py  chrome_extensions.py  cpuid.py  curl.py  curl_certificate.py  ec2_instance_metadata.py  ec2_instance_tags.py  etc_hosts.py  etc_protocols.py  etc_services.py  file.py  firefox_addons.py  groups.py  hash.py  intel_me_info.py  interface_addresses.py  interface_details.py  kernel_info.py  listening_ports.py  logged_in_users.py  os_version.py  osquery_events.py  osquery_extensions.py  osquery_flags.py  osquery_info.py  osquery_packs.py  osquery_registry.py  osquery_schedule.py  platform_info.py  process_memory_map.py  process_open_sockets.py  processes.py  python_packages.py  (+11 more)
base/modules/tmp/sb_utils/osquery_orm/osquery_orm/tables/freebsd/: __init__.py  fbsd_kmods.py  pkg_packages.py
base/modules/tmp/sb_utils/osquery_orm/osquery_orm/tables/linux/: __init__.py  apparmor_events.py  apparmor_profiles.py  bpf_process_events.py  bpf_socket_events.py  deb_packages.py  elf_dynamic.py  elf_info.py  elf_sections.py  elf_segments.py  elf_symbols.py  iptables.py  kernel_modules.py  lldp_neighbors.py  md_devices.py  md_drives.py  md_personalities.py  memory_info.py  memory_map.py  msr.py  npm_packages.py  portage_keywords.py  portage_packages.py  portage_use.py  process_file_events.py  process_namespaces.py  rpm_package_files.py  rpm_packages.py  seccomp_events.py  selinux_events.py  selinux_settings.py  shadow.py  shared_memory.py  syslog_events.py  systemd_units.py
base/modules/tmp/sb_utils/osquery_orm/osquery_orm/tables/macos/: __init__.py  account_policy_data.py  ad_config.py  alf.py  alf_exceptions.py  alf_explicit_auths.py  app_schemes.py  apps.py  asl.py  authorization_mechanisms.py  authorizations.py  battery.py  browser_plugins.py  crashes.py  cups_destinations.py  cups_jobs.py  device_firmware.py  disk_events.py  es_process_events.py  event_taps.py  fan_speed_sensors.py  gatekeeper.py  gatekeeper_approved_apps.py  homebrew_packages.py  ibridge_info.py  iokit_devicetree.py  iokit_registry.py  kernel_extensions.py  kernel_panics.py  keychain_acls.py  keychain_items.py  launchd.py  launchd_overrides.py  location_services.py  managed_policies.py  mdfind.py  mdls.py  nfs_shares.py  nvram.py  package_bom.py  (+27 more)
base/modules/tmp/sb_utils/osquery_orm/osquery_orm/tables/windows/: __init__.py  appcompat_shims.py  authenticode.py  autoexec.py  background_activities_moderator.py  bitlocker_info.py  chassis_info.py  chocolatey_packages.py  connectivity.py  cpu_info.py  default_environment.py  disk_info.py  dns_cache.py  drivers.py  hvci_status.py  ie_extensions.py  kva_speculative_info.py  (+35 more)
base/modules/tmp/sb_utils/root/: .pylintrc  dev_requirements.txt  lint_test_doc.sh  mkdocs.py  private.pem  public.pem  requirements.txt  setup.cfg  setup.py  signature_test.py
base/modules/tmp/sb_utils/root/sb_utils/: __init__.py  amqp_tools.py  auth.py  enums.py  etcd_cache.py  ext_dicts.py  general.py  utils.py
base/modules/tmp/sb_utils/root/sb_utils/message/: __init__.py  enums.py  message.py  sign.py
base/modules/tmp/sb_utils/root/sb_utils/serialize/: __init__.py  enums.py  helpers.py  serialize.py
base/modules/tmp/sb_utils/root/tests/: __init__.py  test_dicts.py  test_messageFormat.py  test_messageSignature.py  utils.py
base/modules/tmp/sb_utils/twisted/: requirements.txt  setup.cfg  setup.py
base/modules/tmp/sb_utils/twisted/sb_utils/twisted/: twisted_tools.py
base/modules/utils/actuator/: requirements.txt  setup.cfg  setup.py
base/modules/utils/actuator/sb_utils/: __init__.py
base/modules/utils/actuator/sb_utils/actuator/: __init__.py  actuator.py  dispatch.py
base/modules/utils/root/: requirements.txt  setup.cfg  setup.py
base/modules/utils/root/sb_utils/: __init__.py  amqp_tools.py  auth.py  ext_dicts.py  general.py  message_obj.py
base/modules/utils/root/sb_utils/message/: __init__.py  helpers.py  serialize.py
base/modules/utils/root/sb_utils/message/pybinn/: encoder.py
base/modules/utils/root/sb_utils/message/pysmile/: constants.py  encode.py
base/modules/utils/twisted/: requirements.txt  setup.cfg  setup.py
base/modules/utils/twisted/sb_utils/: __init__.py
base/modules/utils/twisted/sb_utils/twisted/: __init__.py
(+685 files in other folders)
