[bdist_wheel]
universal=1

[metadata]
  name = sb_utils.actuator
  description = ScreamingBunny Utils.Actuator
  # long_description = file: ReadMe.md
  # long_description_content_type="text/markdown"
  classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Topic :: Utility :: Actuator
    Topic :: Utility :: AMQP

[options]
  packages = find:
  python_requires= >=2.7, !=3.[1-5], <4
  setup_requires = setuptools_scm
  install_requires =
    ScreamingBunny_Utils
    jsonschema
