[bdist_wheel]
universal=1

[metadata]
  name = sb_utils
  description = ScreamingBunny Utils
  # long_description = file: ReadMe.md
  # long_description_content_type="text/markdown"
  classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Topic :: Utility :: Translation
    Topic :: Utility :: AMQP

[options]
  packages = find:
  python_requires= >=2.7, !=3.[1-5], <4
  setup_requires = setuptools_scm
  install_requires =
    bson==0.5.10
    cbor2==5.1.0
    kombu==4.6.10
    msgpack==1.0.0
    py3-bencode==0.0.3
    py-ubjson==0.16.1
    pyrabbit==1.1.0
    pyyaml==5.3.1
    sexpdata==0.0.3
    toml==0.10.1
    xmltodict==0.12.0