[bdist_wheel]
universal=1

[metadata]
name = sb_utils.actuator
version = 0.3.7
description = SB Utils.Actuator
# long_description = file: ReadMe.md
# long_description_content_type="text/markdown"
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Information Technology
  Programming Language :: Python :: 3.6
  Topic :: Utility :: Actuator

[options]
include_package_data = true
packages = find:
python_requires= !=3.[1-6], <4
setup_requires = setuptools_scm
