[bdist_wheel]
universal=1

[metadata]
name = osquery_orm
version = 0.1.3
description = OSQuery ORM
long_description = file: ReadMe.md
long_description_content_type="text/markdown"
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python',
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities
  Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires= !=3.[1-5], <4
setup_requires = setuptools_scm

[options.packages.find]
exclude =
    specs
    tests