[bdist_wheel]
universal=1

[metadata]
name = sb_utils
version = 0.3.3
description = SB Utils
# long_description = file: ReadMe.md
# long_description_content_type="text/markdown"
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Information Technology
  Programming Language :: Python :: 3.6
  Topic :: Utility :: Translation
  Topic :: Utility :: AMQP

[options]
include_package_data = true
packages = find:
python_requires= !=3.[1-5], <4
setup_requires = setuptools_scm

[options.packages.find]
exclude =
    tests